added image and edited header in html and css file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
         <link rel="stylesheet" type="text/css" href="index.css"
     </head>
     <body>
+        <div id = "header">
+            <img src="logo.png">
+        <p>Farm Dean Dairy Limited</p>
 
-        <p> Dairy Farming is a thing to consider</p>
+        </div>
+        
+
+    
     </body>
 </html>
