modified index.css and index. html files

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
-        <p> The best Dairy breeds and their character traits.</p>
+        <div>
+            <h1>The Best Dairy breeds & Features.</h1>
+
+        </div>
+        
     
     </body>
 </html>
