--- a/index.html
+++ b/index.html
@@ -24,8 +24,20 @@
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
-        <div>
-            <h1>The Best Dairy breeds & Features.</h1>
+        <div class="home">
+        <name = "home"></name>
+        <img src="images/dairyybreed3.jpg" alt = "dairy breeds">
+
+        </div>
+        <div class= research>
+            <P>Priority in a way to excel in dairy farming is by choosing a dairy breed that is suitable for your farm.</P>
+            <p> Below are captions of the different cattle breeds. They include;  Ayshire, guernsey and jersey respectively.
+            </p>
+           <img src="images/fresian.jpeg" alt="fresian">
+           <img src="images/guernsey.jpg" alt="guernsey">
+           <img src="images/jersey2.jpg" alt="jersey2">
+           <p><strong>Ayshire</strong> is a dairy breed </p>
+           <p><strong></strong></p>
 
         </div>
         
