--- a/index.html
+++ b/index.html
@@ -30,14 +30,18 @@
 
         </div>
         <div class= research>
-            <P>Priority in a way to excel in dairy farming is by choosing a dairy breed that is suitable for your farm.</P>
-            <p> Below are captions of the different cattle breeds. They include;  Ayshire, guernsey and jersey respectively.
+            <h2>Priority in a way to excel in dairy farming is by choosing a dairy breed that is suitable for your farm.</h2>
+            <p> Below are captions of the different cattle breeds. They include;  Ayshire, guernsey and jersey, Shorthorn, Brownswiss, Holsten fresian respectively.
             </p>
            <img src="images/fresian.jpeg" alt="fresian">
            <img src="images/guernsey.jpg" alt="guernsey">
            <img src="images/jersey2.jpg" alt="jersey2">
            <p><strong>Ayshire</strong> is a dairy breed </p>
-           <p><strong></strong></p>
+           <p><strong>Guernsey</strong> </p>
+           <p><strong>Jersey</strong></p>
+           <p><strong>Shorthorn</strong></p>
+           <p><strong>Brownswiss</strong></p>
+           <p><strong>Holsten fresian</strong></p>
 
         </div>
         
