modified the index.html and index.css file by editing different elements

--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
         <div class="header">
             <img src="images/logo.jpg" height="100px" width="100px">
         <h1>Farm Dean Dairy Limited</h1>
-        <ul class="top-bar">
-            <li><img src="images/search.png" height="50px" width="50px">search</li>
-            <li><img src="images/call.png" height="50px" width="50px">Call us</li>
-        <ul>
         </div>
         <nav>
             <ul>
@@ -25,26 +21,39 @@
             </ul>
         </nav>
         <div class="home">
-        <name = "home"></name>
-        <img src="images/dairyybreed3.jpg" alt = "dairy breeds">
+        <name ="home"></name>
+        <p>Farm Dean is a company aimed at giving a spotlight to the dairy farmers on the different breeds.</p>
+        <p>Farmers are able to create account and login whenever they have questions, and when making orders.</p>
 
         </div>
         <div class= research>
             <h2>Priority in a way to excel in dairy farming is by choosing a dairy breed that is suitable for your farm.</h2>
             <p> Below are captions of the different cattle breeds. They include;  Ayshire, guernsey and jersey, Shorthorn, Brownswiss, Holsten fresian respectively.
             </p>
-           <img src="images/fresian.jpeg" alt="fresian">
-           <img src="images/guernsey.jpg" alt="guernsey">
-           <img src="images/jersey2.jpg" alt="jersey2">
-           <p><strong>Ayshire</strong> is a dairy breed </p>
-           <p><strong>Guernsey</strong> </p>
+           <img src="images/fresian.jpeg" alt="fresian" height="500px" width="350px">
+           <img src="images/guernsey.jpg" alt="guernsey" height="500px" width="350px">
+           <img src="images/jersey2.jpg" alt="jersey2" height="500px" width="350px">
+           <img src="images/shorthorn.jpeg" alt="shorthorn" height="500px" width="350px">
+           <img src="images/brownswiss.jpeg" alt="brownswiss" height="500px" width="350px">
+           <img src="images/ayshire.jpeg" alt="ayshire" height="500px" width="350px">
+           <p><strong>Fresian</strong></p>
+           <p><strong>Guernsey</strong>Breed originated from British Channel Island of Guernsey.roducing high-butterfat, high-protein milk with a high concentration of betacarotene. Being of intermediate size, Guernseys produce their high quality milk while consuming 20 to 30 percent less feed per pound of milk produced than larger dairy breeds. </p>
            <p><strong>Jersey</strong></p>
            <p><strong>Shorthorn</strong></p>
            <p><strong>Brownswiss</strong></p>
-           <p><strong>Holsten fresian</strong></p>
-
+           <p><strong>Ayshire</strong> is a dairy breed  with red and white coat. Uniquely identified by their foraging ability i.e they have  high ablity to convert grass into milk, easy calving and longevity. Ayrshires are also free of genetic disease. Ayrshire milk is referred to as "the ideal drinking milk".</p>  
         </div>
-        
+        <hr>
+        <footer id="footer">
+            <p>contact: 0100441342</p>
+             <p><a href="emailto:farmdean@gmail.com">farmdean@gmail.com</a></p>
+             <img src="images/twitter.png" id="twitter">
+             <img src="images/facebook.png" id="facebook">
+             <img src="images/linked in.png" id="linkedin">
+             <img src="images/gmaail.png" id="gmail">
+             <p>Meet us at our social media platform </p>
+
+        </footer>
     
     </body>
 </html>
