modified index.html and index.css  elements, added new files of contact.css and contact. html and then added forms and styled these elements

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     </head>
     <body>
         <div class="header">
-            <img src="images/logo.jpg" height="100px" width="100px">
-        <h1>Farm Dean Dairy Limited</h1>
-
+            <img src="images/logo.jpg" height="200px" width="200px">
+                <h1>Farm Dean Dairy Limited</h1>
         <form name="input" action="/search/" class="search ready" id="search_form" method="post">
             <div class="input-group">
                 <input type="text" id="form-field-mask-1" class="form-control search-box" placeholder="Search">
@@ -27,12 +26,12 @@
                 <li><a href="#about us">ABOUT US</a></li>
                 <li><a href="#services">SERVICES</a></li>
                 <li><a href="#research">RESEARCH</a></li>
-                <li><a href="#order">ORDER</a></li>
-                <li><a href="#contact">CONTACT</a></li>
+                <li><a href="#news">NEWS</a></li>
+
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
         <div class="home">
-        <name="home"></name>
         <p>Dairy farming is a branch of agriculture aimed at long term production of milk, which is processed at home or at the firm to give dairy products like;cheese, butter.</p>
         <p>Farm Dean is a company aimed at giving a spotlight to the dairy farmers on the different breeds.</p>
         <p>Farmers are able to create account and login whenever they have questions, and when making orders.</p>
@@ -56,29 +55,29 @@
                 <div id="animals">
                     <div id="content1" class="column">
                         <p><strong>Fresian</strong>breed of dairy cattle originates from the Dutch provinces of North Holland and Friesland, and Schleswig-Holstein in Northern Germany. </p>
-                        <p><Strong>Age:</Strong></p>
-                        <p><strong>Body Weight:</strong></p>
-                        <p><strong>Milk Production:</strong></p>
-                        <p><strong>Color:</strong></p>
+                        <p><Strong>Age:</Strong>Calve for the first at 21 or 24 months. with 12 t0 15 lactations.</p>
+                        <p><strong>Body Weight:</strong> it weighs between 680-770kg.</p>
+                        <p><strong>Milk Production:</strong> A pedigree cow prodices between 8500 and 10,000kg of milk per year.</p>
+                        <p><strong>Color:Black and white patched coat.</strong></p>
 
                     </div>
                     <div id="content2" class="column">
 
-                        <p><strong>Guernsey</strong>Breed originated from British Channel Island of Guernsey.roducing high-butterfat, high-protein milk with a high concentration of betacarotene. Being of intermediate size, Guernseys produce their high quality milk while consuming 20 to 30 percent less feed per pound of milk produced than larger dairy breeds. </p>
-                        <p><Strong>Age:</Strong></p>
-                        <p><strong>Body Weight:</strong></p>
-                        <p><strong>Milk Production:</strong></p>
-                        <p><strong>Color:</strong></p>
+                        <p><strong>Guernsey</strong>Breed: Originated from British Channel Island of Guernsey. </p>
+                        <p><Strong>Age:</Strong> Calves at 22 months.</p>
+                        <p><strong>Body Weight:</strong> upto 450-500kgs</p>
+                        <p><strong>Milk Production:</strong>Producing high-butterfat, high-protein milk with a high concentration of betacarotene.</p>
+                        <p><strong>Color:</strong> Varies from yellow to reddish -brown white patches.</p>
                     </div>
                     <div id="content3" class="column">
-                        <p><strong>Jersey</strong></p>
-                        <p><Strong>Age:</Strong></p>
-                        <p><strong>Body Weight:</strong></p>
-                        <p><strong>Milk Production:</strong></p>
-                        <p><strong>Color:</strong></p>
+                        <p><strong>Jersey</strong> originated from Jersey in the Britich Island. It is distributed across all countries.</p>
+                        <p><Strong>Age:</Strong>Calves at 24 months.</p>
+                        <p><strong>Body Weight:</strong> Upto 450-500kgs.</p>
+                        <p><strong>Milk Production:</strong>Has high quality milk,butterfat levels and production longetivity.</p>
+                        <p><strong>Color:</strong> Range from black to pale tan color. switches and mouth is always black and white hair around muzzzle.</p>
                     </div>
                     <div id="content4" class="column">
-                        <p><strong>Shorthorn</strong></p>
+                        <p><strong>Shorthorn</strong> </p>
                         <p><Strong>Age:</Strong></p>
                         <p><strong>Body Weight:</strong></p>
                         <p><strong>Milk Production:</strong></p>
@@ -91,16 +90,21 @@
                         <p><strong>Milk Production:</strong></p>
                         <p><strong>Color:</strong></p>
                     </div>
-                    <div id="conten61" class="column"></div>  
+                    <div id="conten6" class="column">  
                     <p><strong>Ayshire</strong> is a dairy breed  with red and white coat. Uniquely identified by their foraging ability i.e they have  high ablity to convert grass into milk, easy calving and longevity. Ayrshires are also free of genetic disease. Ayrshire milk is referred to as "the ideal drinking milk".</p>  
                     <p><Strong>Age:</Strong></p>
                     <p><strong>Body Weight:</strong></p>
                     <p><strong>Milk Production:</strong></p>
                     <p><strong>Color:</strong></p>
+
                 </div>
-
-
+                </div>
                </main>
+               <div class="news">
+                   <a name="news"></a>
+                   <p> Guernsey is winning this, Being of intermediate size, Guernseys produce their high quality milk while consuming 20 to 30 percent less feed per pound of milk produced than larger dairy breeds.</p>
+                   <p>Look out for the best ranked breed!!   HIGH MILK LEVEL</p>
+               </div>
 
         
         <br>
