modified the index.html file

--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
                         <p><strong>Color:</strong> Range from black to pale tan color. switches and mouth is always black and white hair around muzzzle.</p>
                     </div>
                     <div id="content4" class="column">
-                        <p><strong>Shorthorn</strong> </p>
-                        <p><Strong>Age:</Strong></p>
-                        <p><strong>Body Weight:</strong></p>
-                        <p><strong>Milk Production:</strong></p>
-                        <p><strong>Color:</strong></p>
+                        <p><strong>Shorthorn</strong> The shorthorn breed of cattle originated in the North East of England in the late 18th century. </p>
+                        <p><Strong>Age:</Strong>calves at 24 months</p>
+                        <p><strong>Body Weight:</strong>163-380kg</p>
+                        <p><strong>Milk Production:</strong> 8,000kgs of milk per lactation with ease</p>
+                        <p><strong>Color:</strong> Solid red or have white markings</p>
                     </div>
                     <div id="content5" class="column">
-                        <p><strong>Brownswiss</strong></p>
-                        <p><Strong>Age:</Strong></p>
-                        <p><strong>Body Weight:</strong></p>
-                        <p><strong>Milk Production:</strong></p>
-                        <p><strong>Color:</strong></p>
+                        <p><strong>Brownswiss</strong> is an American breed of dairy cattle originating from the traditional triple-purpose Braunvieh of the Alpine region of Europe</p>
+                        <p><Strong>Age:</Strong>Calves at 23 months</p>
+                        <p><strong>Body Weight:</strong>590–640 kg</p>
+                        <p><strong>Milk Production:</strong> Yields upto 10231kg per year</p>
+                        <p><strong>Color:</strong> Usually Pale brown</p>
                     </div>
                     <div id="conten6" class="column">  
-                    <p><strong>Ayshire</strong> is a dairy breed  with red and white coat. Uniquely identified by their foraging ability i.e they have  high ablity to convert grass into milk, easy calving and longevity. Ayrshires are also free of genetic disease. Ayrshire milk is referred to as "the ideal drinking milk".</p>  
-                    <p><Strong>Age:</Strong></p>
-                    <p><strong>Body Weight:</strong></p>
-                    <p><strong>Milk Production:</strong></p>
-                    <p><strong>Color:</strong></p>
+                    <p><strong>Ayshire</strong> breed of cattle is named after its home country Ayr in southwestern Scotland. </p>  
+                    <p><Strong>Age:</Strong>Calvs at 22 months</p>
+                    <p><strong>Body Weight:</strong>500-700 kg and calves 35-40kg when born</p>
+                    <p><strong>Milk Production:</strong> 20,000 pounds of milk in their lactations. the ideal drinking milk </p>
+                    <p><strong>Color:</strong>  Red and white</p>
 
                 </div>
                 </div>
